kubernetes_deployment/components/geoserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: geoserver
  name: geoserver
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    app: geoserver
