kubernetes_deployment/components/geoserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: geoserver
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - <my-host>
    secretName: <my-tls-secret-name>
  rules:
  - host: <my-host>
    http:
      paths:
      - path: /geoserver/
        pathType: Prefix
        backend:
         service:
           name: geoserver
           port:
             number: 8080
